--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 								<img src="images/AboutMePic.png">
 							</span>
 							<p>
-								I am originally from New Jersey and graduated from Stony Brook University in New York in May 2021 with a BS in Physics and Astronomy & Planetary Science.
+								<!--I am originally from New Jersey and graduated from Stony Brook University in New York in May 2021 with a BS in Physics and Astronomy & Planetary Science.
 								Now, I am living and working in Columbus, Ohio at The Ohio State University.
 								Currently, I am working with the ASAS-SN group with 
 								<a href="http://www.astronomy.ohio-state.edu/~kstanek/">Dr. Krzysztof Stanek</a>
@@ -121,23 +121,26 @@
 								<a href="https://astronomy.osu.edu/people/kochanek.1">Dr. Christopher Kochanek</a>. 
 								As an ASAS-SN Research Assistant I am responsible for daily quality control of images taken with ASAS-SN's twenty-four 14cm telescopes
 								positioned around the globe. Additionally, I am responsible for the follow up of suspected transient sources as well as the naming
-								and releasing of various candidates such as Supernovae and Catacylsimc Variables.
+								and releasing of various candidates such as Supernovae and Catacylsimc Variables.-->
 							</p>
 							<p>
 								<b>Research Interests:</b> Theoretical Astrophysics and Cosmology. Supernovae and Transients, Structure and Formation of the Universe
 							</p>
 							<p>
-								<b> Fun Fact:</b> I have a one year old husky named Kai that loves to go on adventures with me (pictured above)!
+								<b> Fun Fact:</b> I'm a triplet with 20 half siblings
 							</p>
 						</article>
+						
 						<!-- Condor Poster Link -->
+						
+						<!--
 						<article id="poster">
 								<h2 class="major">My Research Poster</h2>
 									<span class="image main">
 										<img src="images/URECAPoster.pdf" alt=""/>
 									</span>
 							<p> If Poster Image does not load or to see a larger image, <a href="images/URECAPoster.pdf" target="_blank">Click Here</a>
-							</p>
+							</p>-->
 						</article>
 						<article id="SSCygposter">
 								<h2 class="major">SS Cyg Observation Poster</h2>
