--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									your image is.
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/professional_square.png" style="width:280px; height:280px; object-fit: cover;">
+								<img src="images/professional_square.JPG" style="width:280px; height:280px; object-fit: cover;">
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
