--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							</span>-->
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<span class="image main">
-								<img src="images/AboutMePic.png">
+								<img src="images/sandusky.jpg">
 							</span>
 							<p>
 								<!--I am originally from New Jersey and graduated from Stony Brook University in New York in May 2021 with a BS in Physics and Astronomy & Planetary Science.
@@ -122,12 +122,18 @@
 								As an ASAS-SN Research Assistant I am responsible for daily quality control of images taken with ASAS-SN's twenty-four 14cm telescopes
 								positioned around the globe. Additionally, I am responsible for the follow up of suspected transient sources as well as the naming
 								and releasing of various candidates such as Supernovae and Catacylsimc Variables.-->
+								I am an Ohio State University alumni who graduated with honors in astrophysics and physics in May 2022.
+								I started work with <a href="https://astronomy.osu.edu/people/kochanek.1">Dr. Christopher Kochanek</a> and the <a href="https://www.astronomy.ohio-state.edu/asassn/index.shtml">ASAS-SN</a> group in the fall of my junior year of college where I began work on my first project, "The ASAS-SN Bright Supernova Catalog -- V. 2018-2020", in the following spring.
+								I now work as a full time ASAS-SN Data Analyst with Dr. Kochanek and <a href="http://www.astronomy.ohio-state.edu/~kstanek/">Dr. Krzysztof Stanek</a>.
+								As an ASAS-SN Data Analyst, I perform daily quality control analyses on images taken by ASAS-SN's twenty 14cm telescopes located around the world, and I manage follow ups of possible transient sources.
+								If one of these possible sources appears real, I also publish it as a candidate on ASAS-SN transient source <a href="https://www.astronomy.ohio-state.edu/asassn/transients.html"> page</a>.
+								These transient source candidates include cataclysmic variable (CVs), supernovae (SNe), tidal disruption events (TDEs), and more. 
 							</p>
 							<p>
-								<b>Research Interests:</b> Theoretical Astrophysics and Cosmology. Supernovae and Transients, Structure and Formation of the Universe
+								<b>Research Interests:</b> Supernovae and transients, high energy astrophysics, extragalactic astrophysics
 							</p>
 							<p>
-								<b> Fun Fact:</b> I'm a triplet with 20 half siblings
+								<b> Fun Fact:</b> I'm was a collegiate barebow archer with a 3rd place medal in Ohio.
 							</p>
 						</article>
 						
