--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
 								I started work with <a href="https://astronomy.osu.edu/people/kochanek.1">Dr. Christopher Kochanek</a> and the <a href="https://www.astronomy.ohio-state.edu/asassn/index.shtml">ASAS-SN</a> group in the fall of my junior year of college where I began work on my first project, "The ASAS-SN Bright Supernova Catalog -- V. 2018-2020", in the following spring.
 								I now work as a full time ASAS-SN Data Analyst with Dr. Kochanek and <a href="http://www.astronomy.ohio-state.edu/~kstanek/">Dr. Krzysztof Stanek</a>.
 								As an ASAS-SN Data Analyst, I perform daily quality control analyses on images taken by ASAS-SN's twenty 14cm telescopes located around the world, and I manage follow ups of possible transient sources.
-								If one of these possible sources appears real, I also publish it as a candidate on ASAS-SN transient source <a href="https://www.astronomy.ohio-state.edu/asassn/transients.html"> page</a>.
-								These transient source candidates include cataclysmic variable (CVs), supernovae (SNe), tidal disruption events (TDEs), and more. 
+								In addition to these responsibilities, I conduct personal research with Dr. Kochanek and <a href="https://ccapp.osu.edu/people/tucker.957">Dr. Michael Tucker</a> on supernovae light echoes.
 							</p>
 							<p>
 								<b>Research Interests:</b> Supernovae and transients, high energy astrophysics, extragalactic astrophysics
@@ -176,11 +175,15 @@
 									the next line.
 								-->
 								<u><b> Current Research Position </b></u>
-								<br> <b> Late Time Evolution of Type II Supernovae</b> <br> 
-								Currently working with Dr. Chris Kochanek studying the evolution of a sample of Type II Supernovae obtained via the collaboration between the Ohio State University and the Large Binocular Telescope (LBT).
+								<br> <b> Light echo distance calculations galactic supernovae </b> <br> 
+								I'm working with Dr. Chris Kochanek and <a href="https://ccapp.osu.edu/people/tucker.957">Dr. Michael Tucker</a> on calculating the distances to Cassiopeia A and Tycho's Supernova using their light echos and 3D dustmaps.
 								<br>
-								<br> <b> ASAS-SN Research Assistant</b> <br> 
-								Research Assistant responsible for daily image quality control and interpretation of data. Additionally responsible for the naming and release of transient sources (Supernovae, Cataclysmic Variables, flares, etcc...), to the <a href=http://www.astronomy.ohio-state.edu/asassn/transients.html> ASAS-SN Transients Webpage. </a>
+								<br> <b> ASAS-SN Data Analyst </b> <br> 
+								<!--Research Assistant responsible for daily image quality control and interpretation of data. Additionally responsible for the naming and release of transient sources (Supernovae, Cataclysmic Variables, flares, etcc...), to the <a href=http://www.astronomy.ohio-state.edu/asassn/transients.html> ASAS-SN Transients Webpage. </a>
+								-->
+								Data analyst of ASAS-SN photometric data. 
+								I work on daily quality control of images taken by ASAS-SN and help name and release transient source candidates including Supernovae (SNe), Cataclysmic Variables (CVs), Tidal Disruption Events (TDEs) and more to the <a href=http://www.astronomy.ohio-state.edu/asassn/transients.html> ASAS-SN Transients Webpage. </a>
+								The candidates include both sources discovered by ASAS-SN and sources discovered by another group but independently detected by ASAS-SN.
 								<br>
 								<ul>
 									<li>
@@ -189,21 +192,23 @@
 								</ul>
 							</p>
 							<p>
-								<u><b> Previous Research: </b></u>
+								<u><b> Publications: </b></u>
 								<br>
-								<b>Condor Array Telescope</b><br>The Condor Array Telescope is an astronomical research telescope built, concieved, and managed by a small project team at Stony Brook University. 
+								<b>The ASAS-SN Bright Supernova Catalog -- V. 2018-2020</b><br>
+								<!--The Condor Array Telescope is an astronomical research telescope built, concieved, and managed by a small project team at Stony Brook University. 
 								The Project is funded by the Advanced Technologies and Instrumentation Program of the National Science Foundation. This is a six telescope array located in the Rio Hurtado Valley of Chile each outfitted with large format CMOS cameras.
+								-->
+								This catalog contains data on almost 1500 supernovae and their host galaxies. 
+								Due to the nature of the ASAS-SN telescopes, this catalog focuses on spectroscopically confirmed supernova with brightnesses above 18th magnitude in the g-band.
+								Supernovae discovered by ASAS-SN and supernova discovered by other groups are included, and we label whether we independently recovered externally discovered supenovae from ASAS-SN photometry.
+								This catalog is meant to allow for large statistical analyses utilizing both these supernova and those from the previous four catalogs for a total sample of 2427 bright supernovae.
+								<br>
+								Neumann, K. D., et al. "The ASAS-SN Bright Supernova Catalog--V. 2018-2020." arXiv preprint arXiv:2210.06492 (2022).
 								<ul>
 									<li>
-										<a href="https://condorarraytelescope.org/">Condor Array Telescope Website</a>
+										<a href="https://arxiv.org/abs/2210.06492">arXiv Link</a>
 									</li>
-								<!-- This is a "List Item" -->
-									<li>
-									<!-- 	Note that this links to #about, which will move the page to wherever
-										the element with the id "about" exists.
-									-->
-										<a href="#poster">My Condor Research Poster</a>
-									</li>
+								
 								</ul>
 						</article>
 						<article id="projects">
