--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
 								<li>
 									<a href="#education">Education</a>
 								</li>
+								<!--
 								<li>
 									<a href="#projects">Projects</a>
 								</li>
+								-->
 								<li>
 									<a href="#contact">Contact</a>
 								</li>
@@ -274,16 +276,16 @@
 								<img src="images/work.jpg" alt=""/>
 							</span>
 							<p>
-								<b> Stony Brook University</b> -- Stony Brook, NY           May 2021<br>
-								<i>Bachelor of Science in Physics and 2nd Major in Astronomy & Planetary Science</i> <br>
-									Magna Cum Laude<br>
-									Honors Degree in Physics
+								<b> The Ohio State University</b> -- Columbus, OH	May 2022<br>
+								<i>Bachelor of Science in Astronomy and Astrophysics and 2nd Major in Physics</i><br>
+								Magna Cum Laude<br> 
+								with honor in Arts and Sciences
 							</p>
 							<p>
 								<b>Teaching Experience</b>
-								<li>Undergraduate Teaching Assistant for a sophomore level Astrophysics class.</li>
-								<li>Paid Tutor for Introductory Level College Physics Courses where I create lessons, offer extra practice, and additional resources to help the student succeed.</li> 
-								<li> High school level Physics and Math tutor.</li>
+								<li>Astronomy 1102 & 1144: Introductory Level Astronomy Courses where I helped prepare homework, wrote daily quizzes, managed attendance, and graded assignments.</li>
+								<li>Physics 2300 & 2301: Intermediate Classical Mechanics Courses where I tutored students on past and current material and worked with groups of students on weekly assignments.</li>
+								
 							</p>
 						</article>
 
@@ -291,8 +293,12 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email: </b>rizzosmith.1@osu.edu  
-								<br>       michael.josmith21@gmail.com
+								<b>Email: </b>neumann.110@osu.edu  
+								<br>       neumann.kyle15@gmail.com
+								<br>
+								<b>Address: </b>4006 McPherson Laboratory
+								<br>		140 West 18th Ave.
+								<br>		Columbus, OH 43210
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
@@ -300,13 +306,21 @@
 								here: https://fontawesome.com/icons
 							-->
 							<ul class="icons">
-								<!-- The Twitter icon -->
+								<!-- The ORCID icon -->
 								<li>
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="https://twitter.com/MikeRizzoSmith" class="icon fa-twitter">
-										<span class="label">Twitter</span>
+									<a href="https://orcid.org/my-orcid?orcid=0000-0002-2701-8433" class="icon fa-orcid">
+										<span class="label">ORCID</span>
+									</a>
+								</li>
+								<li>
+									<!-- 	Note that you need to change the link to point to your page.
+										Replace "#" with your Twitter profile page.
+									-->
+									<a href="https://www.linkedin.com/in/kyle-n-189807137/" class="icon fa-linkedin">
+										<span class="label">linkedin</span>
 									</a>
 								</li>
 								<!-- The Facebook icon -->
