--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 								-->
 								<u><b> Current Research Position </b></u>
 								<br> <b> Light echo distance calculations galactic supernovae </b> <br> 
-								I'm working with Dr. Chris Kochanek and <a href="https://ccapp.osu.edu/people/tucker.957">Dr. Michael Tucker</a> on calculating the distances to Cassiopeia A and Tycho's Supernova using their light echos and 3D dustmaps.
+								I'm working with Dr. Chris Kochanek and Dr. Michael Tucker on calculating the distances to Cassiopeia A and Tycho's Supernova using their light echos and 3D dustmaps.
 								<br>
 								<br> <b> ASAS-SN Data Analyst </b> <br> 
 								<!--Research Assistant responsible for daily image quality control and interpretation of data. Additionally responsible for the naming and release of transient sources (Supernovae, Cataclysmic Variables, flares, etcc...), to the <a href=http://www.astronomy.ohio-state.edu/asassn/transients.html> ASAS-SN Transients Webpage. </a>
@@ -311,7 +311,7 @@
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="https://orcid.org/my-orcid?orcid=0000-0002-2701-8433" class="icon fa-orcid">
+									<a href="https://orcid.org/my-orcid?orcid=0000-0002-2701-8433">
 										<span class="label">ORCID</span>
 									</a>
 								</li>
@@ -323,21 +323,21 @@
 										<span class="label">linkedin</span>
 									</a>
 								</li>
-								<!-- The Facebook icon -->
+								<!-- The Facebook icon --><!--
 								<li>
 									<a href="#" class="icon fa-facebook">
 										<span class="label">Facebook</span>
 									</a>
 								</li>
-								<!-- The Instagram icon -->
+								<!-- The Instagram icon ->
 								<li>
 									<a href="#" class="icon fa-instagram">
 										<span class="label">Instagram</span>
 									</a>
-								</li>
+								</li>-->
 								<!-- The GitHub icon -->
 								<li>
-									<a href="#" class="icon fa-github">
+									<a href="https://github.com/kyleneumann" class="icon fa-github">
 										<span class="label">GitHub</span>
 									</a>
 								</li>
@@ -359,7 +359,7 @@
 						<!-- 	You can change "Untitled" to your name to show everyone that
 							this is your work.
 						-->
-						<p class="copyright">&copy; Michael Smith.</p>
+						<p class="copyright">&copy; Kyle Neumann.</p>
 					</footer>
 
 			</div>
