--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 										Replace "#" with your Twitter profile page.
 									-->
 									<a href="https://orcid.org/my-orcid?orcid=0000-0002-2701-8433">
-										<span class="label">ORCID</span>
+										<span class="label">iD</span>
 									</a>
 								</li>
 								<li>
