--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								As an ASAS-SN Research Assistant I am responsible for daily quality control of images taken with ASAS-SN's twenty-four 14cm telescopes
 								positioned around the globe. Additionally, I am responsible for the follow up of suspected transient sources as well as the naming
 								and releasing of various candidates such as Supernovae and Catacylsimc Variables.-->
-								I am an Ohio State University alumni who graduated with honors in astrophysics and physics in May 2022.
+								I am an Ohio State University alum who graduated with honors in astrophysics and physics in May 2022.
 								I started work with <a href="https://astronomy.osu.edu/people/kochanek.1">Dr. Christopher Kochanek</a> and the <a href="https://www.astronomy.ohio-state.edu/asassn/index.shtml">ASAS-SN</a> group in the fall of my junior year of college where I began work on my first project, "The ASAS-SN Bright Supernova Catalog -- V. 2018-2020", in the following spring.
 								I now work as a full time ASAS-SN Data Analyst with Dr. Kochanek and <a href="http://www.astronomy.ohio-state.edu/~kstanek/">Dr. Krzysztof Stanek</a>.
 								As an ASAS-SN Data Analyst, I perform daily quality control analyses on images taken by ASAS-SN's twenty 14cm telescopes located around the world, and I manage follow ups of possible transient sources.
