--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="https://orcid.org/my-orcid?orcid=0000-0002-2701-8433">
+									<a href="https://orcid.org/0000-0002-2701-8433">
 										<span class="label">iD</span>
 									</a>
 								</li>
