--- a/index.html
+++ b/index.html
@@ -273,7 +273,8 @@
 						<article id="education">
 							<h2 class="major">Education</h2>
 							<span class="image main">
-								<img src="images/work.jpg" alt=""/>
+								<img src="images/OSU_campus.jpg" alt=""/>
+								<footer><small>&copy; The Ohio State University.</small></footer>
 							</span>
 							<p>
 								<b> The Ohio State University</b> -- Columbus, OH	May 2022<br>
