--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 						<article id="education">
 							<h2 class="major">Education</h2>
 							<span class="image main">
-								<img src="images/OSU_campus.jpg" alt=""/>
+								<img src="images/OSU_campus.jpg" alt="The Ohio State University Campus"/>
 								<footer><small>&copy; The Ohio State University.</small></footer>
 							</span>
 							<p>
