--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<b>Research Interests:</b> Supernovae and transients, high energy astrophysics, extragalactic astrophysics
 							</p>
 							<p>
-								<b> Fun Fact:</b> I'm was a collegiate barebow archer with a 3rd place medal in Ohio.
+								<b> Fun Fact:</b> I'm a triplet with two brothers. No, we are not identical.
 							</p>
 						</article>
 						
