--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 						<!-- 	You can change "Untitled" to your name to show everyone that
 							this is your work.
 						-->
-						<p class="copyright">&copy; Kyle Neumann.</p>
+						<p class="copyright">&copy; Kyle Neumann. Image credit: NASA/CXC/SAO</p>
 					</footer>
 
 			</div>
