--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 									the next line.
 								-->
 								<u><b> Current Research Position </b></u>
-								<br> <b> Light echo distance calculations galactic supernovae </b> <br> 
+								<br> <b> Light echo distance calculations of galactic supernovae </b> <br> 
 								I'm working with Dr. Chris Kochanek and Dr. Michael Tucker on calculating the distances to Cassiopeia A and Tycho's Supernova using their light echos and 3D dustmaps.
 								<br>
 								<br> <b> ASAS-SN Data Analyst </b> <br> 
@@ -205,9 +205,10 @@
 								Supernovae discovered by ASAS-SN and supernova discovered by other groups are included, and we label whether we independently recovered externally discovered supenovae from ASAS-SN photometry.
 								This catalog is meant to allow for large statistical analyses utilizing both these supernova and those from the previous four catalogs for a total sample of 2427 bright supernovae.
 								<br>
-								Neumann, K. D., et al. "The ASAS-SN Bright Supernova Catalog--V. 2018-2020." arXiv preprint arXiv:2210.06492 (2022).
+								Neumann, K. D., et al. "The ASAS-SN bright supernova catalogue -- V. 2018-2020", 2023, MNRAS, 520, 4356
 								<ul>
 									<li>
+										<a href="https://academic.oup.com/mnras/article/520/3/4356/7024861">MNRAS Link</a>
 										<a href="https://arxiv.org/abs/2210.06492">arXiv Link</a>
 									</li>
 								
