--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									The Ohio State University <br> ASAS-SN Data Analyst 	
+									Penn State University <br> Graduate Student of Astronomy and Astrophysics
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
@@ -124,9 +124,9 @@
 								As an ASAS-SN Research Assistant I am responsible for daily quality control of images taken with ASAS-SN's twenty-four 14cm telescopes
 								positioned around the globe. Additionally, I am responsible for the follow up of suspected transient sources as well as the naming
 								and releasing of various candidates such as Supernovae and Catacylsimc Variables.-->
-								I am an Ohio State University alum who graduated with honors in astrophysics and physics in May 2022.
+								I am an Ohio State University undergraduate alum now in the astronomy and astrophysics graduate program at Penn State University.
 								I started work with <a href="https://astronomy.osu.edu/people/kochanek.1">Dr. Christopher Kochanek</a> and the <a href="https://www.astronomy.ohio-state.edu/asassn/index.shtml">ASAS-SN</a> group in the fall of my junior year of college where I began work on my first project, "The ASAS-SN Bright Supernova Catalog -- V. 2018-2020", in the following spring.
-								I now work as a full time ASAS-SN Data Analyst with Dr. Kochanek and <a href="http://www.astronomy.ohio-state.edu/~kstanek/">Dr. Krzysztof Stanek</a>.
+								Following this, I worked as a full time ASAS-SN Data Analyst with Dr. Kochanek and <a href="http://www.astronomy.ohio-state.edu/~kstanek/">Dr. Krzysztof Stanek</a>.
 								As an ASAS-SN Data Analyst, I perform daily quality control analyses on images taken by ASAS-SN's twenty 14cm telescopes located around the world, and I manage follow ups of possible transient sources.
 								In addition to these responsibilities, I conduct personal research with Dr. Kochanek and <a href="https://ccapp.osu.edu/people/tucker.957">Dr. Michael Tucker</a> on supernovae light echoes.
 							</p>
@@ -176,10 +176,11 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<u><b> Current Research Position </b></u>
+								<u><b> Current Research </b></u>
 								<br> <b> Light echo distance calculations of galactic supernovae </b> <br> 
 								I'm working with Dr. Chris Kochanek and Dr. Michael Tucker on calculating the distances to Cassiopeia A and Tycho's Supernova using their light echos and 3D dustmaps.
 								<br>
+								<u><b> Past Research Position </b></u>
 								<br> <b> ASAS-SN Data Analyst </b> <br> 
 								<!--Research Assistant responsible for daily image quality control and interpretation of data. Additionally responsible for the naming and release of transient sources (Supernovae, Cataclysmic Variables, flares, etcc...), to the <a href=http://www.astronomy.ohio-state.edu/asassn/transients.html> ASAS-SN Transients Webpage. </a>
 								-->
@@ -296,12 +297,11 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email: </b>neumann.110@osu.edu  
+								<b>Email: </b>kdn5172@psu.edu  
 								<br>       neumann.kyle15@gmail.com
 								<br>
-								<b>Address: </b>4006 McPherson Laboratory
-								<br>		140 West 18th Ave.
-								<br>		Columbus, OH 43210
+								<b>Address: </b>537 Davey Laboratory
+								<br>		State College, PA 16801
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
