--- a/index.html
+++ b/index.html
@@ -124,11 +124,7 @@
 								As an ASAS-SN Research Assistant I am responsible for daily quality control of images taken with ASAS-SN's twenty-four 14cm telescopes
 								positioned around the globe. Additionally, I am responsible for the follow up of suspected transient sources as well as the naming
 								and releasing of various candidates such as Supernovae and Catacylsimc Variables.-->
-								I am an Ohio State University undergraduate alum now in the astronomy and astrophysics graduate program at Penn State University.
-								I started work with <a href="https://astronomy.osu.edu/people/kochanek.1">Dr. Christopher Kochanek</a> and the <a href="https://www.astronomy.ohio-state.edu/asassn/index.shtml">ASAS-SN</a> group in the fall of my junior year of college where I began work on my first project, "The ASAS-SN Bright Supernova Catalog -- V. 2018-2020", in the following spring.
-								Following this, I worked as a full time ASAS-SN Data Analyst with Dr. Kochanek and <a href="http://www.astronomy.ohio-state.edu/~kstanek/">Dr. Krzysztof Stanek</a>.
-								As an ASAS-SN Data Analyst, I perform daily quality control analyses on images taken by ASAS-SN's twenty 14cm telescopes located around the world, and I manage follow ups of possible transient sources.
-								In addition to these responsibilities, I conduct personal research with Dr. Kochanek and <a href="https://ccapp.osu.edu/people/tucker.957">Dr. Michael Tucker</a> on supernovae light echoes.
+								I am a graduate student in the Department of Astronomy and Astrophysics at Penn State University. During my first year, I began working with <a href="https://science.psu.edu/astro/people/adf15">Dr. Abe Falcone</a> and <a href="https://sekerby.github.io/"> Dr. Steve Kerby</a> on X-ray data analysis. My current project involves analyzing X-ray observations of Fermi 4FGL-DR4 unassociated sources with The Neil Gehrels Swift Observatory. Prior to PSU, I worked as a data analyst with, the observational transient group, ASAS-SN at The Ohio State University in Columbus, Ohio where I completed my B.S. with honors in Astronomy and Physics in 2022.
 							</p>
 							<p>
 								<b>Research Interests:</b> Supernovae and transients, high energy astrophysics, extragalactic astrophysics
@@ -177,9 +173,12 @@
 									the next line.
 								-->
 								<u><b> Current Research </b></u>
+								<br> <b> Multiwavelength Spectral Analysis of 4FGL-DR4 Unassociated Sources </b> <br>
+								I'm working with Dr. Abe Falcone and Dr. Steve Kerby on analyzing Fermi 4FGL-DR4 Unassociated Sources with Swift-XRT and Swift-UVOT observations.
+								<!--
 								<br> <b> Light echo distance calculations of galactic supernovae </b> <br> 
 								I'm working with Dr. Chris Kochanek and Dr. Michael Tucker on calculating the distances to Cassiopeia A and Tycho's Supernova using their light echos and 3D dustmaps.
-								<br>
+								<br> -->
 								<u><b> Past Research Position </b></u>
 								<br> <b> ASAS-SN Data Analyst </b> <br> 
 								<!--Research Assistant responsible for daily image quality control and interpretation of data. Additionally responsible for the naming and release of transient sources (Supernovae, Cataclysmic Variables, flares, etcc...), to the <a href=http://www.astronomy.ohio-state.edu/asassn/transients.html> ASAS-SN Transients Webpage. </a>
@@ -195,9 +194,13 @@
 								</ul>
 							</p>
 							<p>
-								<u><b> Publications: </b></u>
+								<u><b> First Author Publications: </b></u>
+								<br><b>Echo Location: Distances to Galactic Supernovae From ASAS-SN Light Echoes and 3D Dust Maps</b><br>
+								Light echoes occur when light from a luminous transient is scattered by dust back into our line of sight with a time delay due to the extra propagation distance. We introduce a novel approach to estimating the distance to a source by combining light echoes with recent three-dimensional dust maps. We identify light echoes from the historical supernovae Cassiopeia A and Tycho’s SN in nearly a decade of imaging from the All-Sky Automated Survey for Supernovae (ASAS-SN). Using these light echoes, we find distances of 3.6 ± 0.1 kpc and 3.2<sup>+0.1</sup><sub>-0.2</sub> kpc to Cas A and Tycho, respectively, which are generally consistent with previous estimates but are more precise. These distance uncertainties are primarily dominated by the low distance resolution of the 3D dust maps, which will likely improve in the future. The candidate single degenerate explosion donor stars B and G in Tycho are clearly foreground stars. Finally, the inferred reddening towards each SN agrees well with the intervening H i column density estimates from X-ray analyses of the remnants.
 								<br>
-								<b>The ASAS-SN Bright Supernova Catalog -- V. 2018-2020</b><br>
+								Neumann, K. D., et al. 2024, arXiv e-prints, p. <a href="https://arxiv.org/abs/2407.14584">arXiv:2407.14584</a>
+
+								<br><b>The ASAS-SN Bright Supernova Catalog -- V. 2018-2020</b><br>
 								<!--The Condor Array Telescope is an astronomical research telescope built, concieved, and managed by a small project team at Stony Brook University. 
 								The Project is funded by the Advanced Technologies and Instrumentation Program of the National Science Foundation. This is a six telescope array located in the Rio Hurtado Valley of Chile each outfitted with large format CMOS cameras.
 								-->
@@ -206,15 +209,8 @@
 								Supernovae discovered by ASAS-SN and supernova discovered by other groups are included, and we label whether we independently recovered externally discovered supenovae from ASAS-SN photometry.
 								This catalog is meant to allow for large statistical analyses utilizing both these supernova and those from the previous four catalogs for a total sample of 2427 bright supernovae.
 								<br>
-								Neumann, K. D., et al. "The ASAS-SN bright supernova catalogue -- V. 2018-2020", 2023, MNRAS, 520, 4356
-								<ul>
-									<li>
-										<a href="https://academic.oup.com/mnras/article/520/3/4356/7024861">MNRAS Link</a>
-									</li><li>
-										<a href="https://arxiv.org/abs/2210.06492">arXiv Link</a>
-									</li>
-								
-								</ul>
+								Neumann, K. D., et al., 2023, <a href="https://academic.oup.com/mnras/article/520/3/4356/7024861">MNRAS</a>, <a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.520.4356N/abstract">520, 4356</a>
+
 						</article>
 						<article id="projects">
 							<h2 class="major">Previous Projects</h2>
@@ -276,10 +272,12 @@
 						<article id="education">
 							<h2 class="major">Education</h2>
 							<span class="image main">
-								<img src="images/OSU_campus.jpg" alt="The Ohio State University Campus"/>
-								<footer><small>&copy; The Ohio State University.</small></footer>
+								<img src="images/DaveyLabRoof.jpeg" alt="Penn State Davey Roof"/>
+								<footer><small>&copy; Penn State. <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons</a></small></footer>
 							</span>
 							<p>
+								<b> Pennsylvania State University</b> -- University Park, PA  <i>Current</i><br>
+								<i>Graduate Student in Astronomy and Astrophysics</i><br> 
 								<b> The Ohio State University</b> -- Columbus, OH	May 2022<br>
 								<i>Bachelor of Science in Astronomy and Astrophysics and 2nd Major in Physics</i><br>
 								Magna Cum Laude<br> 
@@ -287,6 +285,7 @@
 							</p>
 							<p>
 								<b>Teaching Experience</b>
+								<br><b>At OSU</b><br>
 								<li>Astronomy 1102 & 1144: Introductory Level Astronomy Courses where I helped prepare homework, wrote daily quizzes, managed attendance, and graded assignments.</li>
 								<li>Physics 2300 & 2301: Intermediate Classical Mechanics Courses where I tutored students on past and current material and worked with groups of students on weekly assignments.</li>
 								
@@ -300,8 +299,9 @@
 								<b>Email: </b>kdn5172@psu.edu  
 								<br>       neumann.kyle15@gmail.com
 								<br>
-								<b>Address: </b>537 Davey Laboratory
-								<br>		State College, PA 16801
+								<b>Address: </b>525 Davey Laboratory
+								<br>		251 Pollock Road
+								<br>		University Park, PA 16802
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
