--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
 								<footer><small>&copy; Penn State. <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons</a></small></footer>
 							</span>
 							<p>
-								<b> Pennsylvania State University</b> -- University Park, PA  <i>Current</i><br>
-								<i>Graduate Student in Astronomy and Astrophysics</i><br> 
-								<b> The Ohio State University</b> -- Columbus, OH	May 2022<br>
+								<b> Pennsylvania State University</b> -- University Park, PA 	Present<br>
+								<i>Graduate Student in Department of Astronomy & Astrophysics</i><br> 
+								<b> The Ohio State University</b> -- Columbus, OH 	May 2022<br>
 								<i>Bachelor of Science in Astronomy and Astrophysics and 2nd Major in Physics</i><br>
 								Magna Cum Laude<br> 
 								with honor in Arts and Sciences
