--- a/index.html
+++ b/index.html
@@ -174,7 +174,13 @@
 								-->
 								<u><b> Current Research </b></u>
 								<br> <b> Multiwavelength Spectral Analysis of 4FGL-DR4 Unassociated Sources </b> <br>
-								I'm working with Dr. Abe Falcone and Dr. Steve Kerby on analyzing Fermi 4FGL-DR4 Unassociated Sources with Swift-XRT and Swift-UVOT observations.
+								I'm working with Dr. Abe Falcone and Dr. Steve Kerby on analyzing Fermi 4FGL-DR4 Unassociated Sources with Fermi-LAT, Swift-XRT, and Swift-UVOT observations.
+								<br>
+								<ul>
+									<li>
+										<a href="https://sites.psu.edu/headilab/">The Falcone Group Website</a>
+									</li>
+								</ul>
 								<!--
 								<br> <b> Light echo distance calculations of galactic supernovae </b> <br> 
 								I'm working with Dr. Chris Kochanek and Dr. Michael Tucker on calculating the distances to Cassiopeia A and Tycho's Supernova using their light echos and 3D dustmaps.
