--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							</span>-->
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<span class="image main">
-								<img src="images/professional_square.JPG">
+								<img src="images/pumpkins.jpg">
 							</span>
 							<p>
 								<!--I am originally from New Jersey and graduated from Stony Brook University in New York in May 2021 with a BS in Physics and Astronomy & Planetary Science.
