--- a/index.html
+++ b/index.html
@@ -181,15 +181,12 @@
 										<a href="https://sites.psu.edu/headilab/">The Falcone Group Website</a>
 									</li>
 								</ul>
-								<br> <b> Light echo distance calculations of galactic supernovae </b> <br> 
-								I'm working with Dr. Chris Kochanek and Dr. Michael Tucker on calculating the distances to Cassiopeia A and Tycho's Supernova using their light echos and 3D dustmaps.
-								<br> 
 								<br><u><b> Past Research Position </b></u>
 								<br> <b> ASAS-SN Data Analyst </b> <br> 
 								<!--Research Assistant responsible for daily image quality control and interpretation of data. Additionally responsible for the naming and release of transient sources (Supernovae, Cataclysmic Variables, flares, etcc...), to the <a href=http://www.astronomy.ohio-state.edu/asassn/transients.html> ASAS-SN Transients Webpage. </a>
 								-->
 								Data analyst of ASAS-SN photometric data. 
-								I work on daily quality control of images taken by ASAS-SN and help name and release transient source candidates including Supernovae (SNe), Cataclysmic Variables (CVs), Tidal Disruption Events (TDEs) and more to the <a href=http://www.astronomy.ohio-state.edu/asassn/transients.html> ASAS-SN Transients Webpage. </a>
+								I work on daily quality control of images taken by ASAS-SN and help name and release transient source candidates, including Supernovae (SNe), Cataclysmic Variables (CVs), Tidal Disruption Events (TDEs) and more to the <a href=http://www.astronomy.ohio-state.edu/asassn/transients.html> ASAS-SN Transients Webpage. </a>
 								The candidates include both sources discovered by ASAS-SN and sources discovered by another group but independently detected by ASAS-SN.
 								<br>
 								<ul>
@@ -201,9 +198,8 @@
 							<p>
 								<u><b> First Author Publications: </b></u>
 								<br><b>Echo Location: Distances to Galactic Supernovae From ASAS-SN Light Echoes and 3D Dust Maps</b><br>
-								Light echoes occur when light from a luminous transient is scattered by dust back into our line of sight with a time delay due to the extra propagation distance. We introduce a novel approach to estimating the distance to a source by combining light echoes with recent three-dimensional dust maps. We identify light echoes from the historical supernovae Cassiopeia A and Tycho’s SN in nearly a decade of imaging from the All-Sky Automated Survey for Supernovae (ASAS-SN). Using these light echoes, we find distances of 3.6 ± 0.1 kpc and 3.2<sup>+0.1</sup><sub>-0.2</sub> kpc to Cas A and Tycho, respectively, which are generally consistent with previous estimates but are more precise. These distance uncertainties are primarily dominated by the low distance resolution of the 3D dust maps, which will likely improve in the future. The candidate single degenerate explosion donor stars B and G in Tycho are clearly foreground stars. Finally, the inferred reddening towards each SN agrees well with the intervening H I column density estimates from X-ray analyses of the remnants.
-								<br>
-								Neumann, K. D., et al. 2024, arXiv e-prints, p. <a href="https://arxiv.org/abs/2407.14584">arXiv:2407.14584</a>
+								Light echoes occur when light from a luminous transient is scattered by dust back into our line of sight with a time delay due to the extra propagation distance. We introduce a novel approach to estimating the distance to a source by combining light echoes with recent three-dimensional dust maps. We identify light echoes from the historical supernovae Cassiopeia A and SN 1572 (Tycho) in nearly a decade of imaging from the All-Sky Automated Survey for Supernovae (ASAS-SN). Using these light echoes, we find distances of 3.6±0.1 kpc and 3.2−0.2+0.1 kpc to Cas A and Tycho, respectively, which are generally consistent with previous estimates but are more precise. These distance uncertainties are primarily dominated by the low distance resolution of the 3D dust maps, which will likely improve in the future. The candidate single degenerate explosion donor stars B and G in Tycho are clearly foreground stars. Finally, the inferred reddening towards each SN agrees well with the intervening column density estimates from X-ray analyses of the remnants.
+								Neumann, K. D., et al. 2024, <a href="https://astro.theoj.org/article/125246-echo-location-distances-to-galactic-supernovae-from-asas-sn-light-echoes-and-3d-dust-maps">OJAp</a>, <a href="https://ui.adsabs.harvard.edu/abs/2024OJAp....7E..98N/abstract"> 7, 98</a>
 
 								<br><b>The ASAS-SN Bright Supernova Catalog -- V. 2018-2020</b><br>
 								<!--The Condor Array Telescope is an astronomical research telescope built, concieved, and managed by a small project team at Stony Brook University. 
